# SAGA_Grader

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  feedback_schema.json  generate_feedback.py  pyproject.toml  saga.py  saga.tcss  saga_config.toml  saga_core.py  saga_wizard.py
docs/: INTEGRATION_NOTES.md  SETUP_API.md  SETUP_PROMPT.md
rubrics/: README_ENGLISH.md  deutsch_unterstufe.md  englisch_a2.md  srdp_deutsch_oberstufe.md  srdp_englisch_b1.md  srdp_englisch_b2.md
rubrics/legacy/: aufbau_referenz.md  eroerterung.md  kommentar.md  rhetorische_figuren.md
tests/: test_feedback.py  test_llm_pipeline.py  test_tui.py
tests/fixtures/: emma_b2_feedback.json  matthias_feedback.json  tamara_feedback.json
